--- a/index.html
+++ b/index.html
@@ -1,33 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Slider</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
-    <link rel="shortcut icon" href="favicon.ico" />
-    <link
-      rel="stylesheet"
-      media="screen"
-      href="./assets/vendor/jquery-1.8.3.min.js"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" media="screen" href="assets/css/style.css" />
-  </head>
 
-  <body>
-    <!--container start-->
-    <div class="container">
-      <!--main section start-->
-      <main></main>
-      <!--main section end-->
-    </div>
-    <!--container end-->
-    <script src="assets/js/script.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Slider</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="stylesheet" media="screen" href="./assets/vendor/jquery-1.8.3.min.js" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" media="screen" href="assets/css/style.css" />
+  <!-- Slick Slider CSS -->
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
+</head>
+
+<body>
+  <!--container start-->
+  <div class="container">
+    <!--main section start-->
+    <main>
+      <div class="slider-container">
+        <div class="slider">
+          <div>
+            <figure>
+              <img src="./assets/images/classes1.svg" alt="Class2" />
+            </figure>
+          </div>
+          <div>
+            <figure>
+              <img src="./assets/images/classes2.svg" alt="Class2" />
+            </figure>
+          </div>
+          <div>
+            <figure>
+              <img src="./assets/images/classes3.svg" alt="Class2" />
+            </figure>
+          </div>
+          <div>
+            <figure>
+              <img src="./assets/images/classes4.svg" alt="Class2" />
+            </figure>
+          </div>
+          <div>
+            <figure>
+              <img src="./assets/images/classes5.svg" alt="Class2" />
+            </figure>
+          </div>
+          <div>
+            <figure>
+              <img src="./assets/images/classes6.svg" alt="Class2" />
+            </figure>
+          </div>
+          <div>
+            <figure>
+              <img src="./assets/images/classes7.svg" alt="Class2" />
+            </figure>
+          </div>
+          <div>
+            <figure>
+              <img src="./assets/images/classes8.svg" alt="Class2" />
+            </figure>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!--main section end-->
+  </div>
+  <!--container end-->
+  <script src="assets/js/script.js"></script>
+</body>
+
 </html>
