--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
     <!--main section end-->
   </div>
   <!--container end-->
-     <!-- jQuery -->
-     <script src="./assets/vendor/jquery-3.7.1.min.js"></script>
-     <!-- Slick Slider JS -->
-     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+  <!-- jQuery -->
+  <script src="./assets/vendor/jquery-3.7.1.min.js"></script>
+  <!-- Slick Slider JS -->
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="assets/js/script.js"></script>
 </body>
 
