html file commit

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
+
+
 </head>
 
 <body>
@@ -23,7 +25,7 @@
     <main>
       <div class="slider-container">
         <div class="slider">
-          <div>
+          <div class="slider-div">
             <figure>
               <img src="./assets/images/classes1.svg" alt="Class2" />
             </figure>
@@ -64,14 +66,16 @@
             </figure>
           </div>
         </div>
+        <button class="custom-prev-arrow">←</button>
+        <button class="custom-next-arrow">→</button>
       </div>
     </main>
     <!--main section end-->
   </div>
   <!--container end-->
   <!-- jQuery -->
-  <script src="./assets/vendor/jquery-3.7.1.min.js"></script>
-  <!-- Slick Slider JS -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- Slick JS -->
   <script type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="assets/js/script.js"></script>
