html file commit

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
             </figure>
           </div>
         </div>
+        <button class="custom-prev-arrow">←</button>
+        <button class="custom-next-arrow">→</button>
       </div>
     </main>
     <!--main section end-->
