html file commit

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-
-
 </head>
 
 <body>
@@ -25,7 +23,7 @@
     <main>
       <div class="slider-container">
         <div class="slider">
-          <div class="slider-div">
+          <div>
             <figure>
               <img src="./assets/images/classes1.svg" alt="Class2" />
             </figure>
@@ -74,13 +72,8 @@
   </div>
   <!--container end-->
   <!-- jQuery -->
-<<<<<<< HEAD
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- Slick JS -->
-=======
   <script src="./assets/vendor/jquery-3.7.1.min.js"></script>
   <!-- Slick Slider JS -->
->>>>>>> feature-html
   <script type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="assets/js/script.js"></script>
